--- a/re-beau.ioc
+++ b/re-beau.ioc
@@ -46,7 +46,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -85,8 +84,9 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB4.GPIOParameters=GPIO_Label
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB4.GPIO_Label=IMU_INT
+PB4.GPIO_PuPd=GPIO_PULLDOWN
 PB4.Locked=true
 PB4.Signal=GPXTI4
 PB8.Locked=true
